--- a/server/src/static/css/index.css
+++ b/server/src/static/css/index.css
@@ -12,6 +12,17 @@ p {
     margin-bottom: 0;
 }
 
+canvas {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    /* position: absolute; */
+    background: black;
+    /* z-index: 0; */
+}
+
 .idx_search {
     margin-right: 1rem;
     line-height: 1rem;
