--- a/server/src/static/css/navmenu.css
+++ b/server/src/static/css/navmenu.css
@@ -17,9 +17,13 @@
     top: -2px;
 }
 
+.nav-menu-top-container {
+    height: 5rem;
+}
+
 .nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+    font-size: 1.5rem;
+    padding: 1rem;
 }
 
     .nav-item:first-of-type {
@@ -32,6 +36,7 @@
 
     .nav-item a {
         color: #d7d7d7;
+        background-color: rgba(0,0,0,0.4);
         border-radius: 4px;
         height: 3rem;
         display: flex;
