--- a/server/src/templates/navmenu.html
+++ b/server/src/templates/navmenu.html
@@ -1,8 +1,9 @@
-<div class="@NavMenuCssClass flex-fill">
+<div class="nav-menu-top-container flex-fill w-100">
     <nav class="d-flex flex-row h-100">
+        <div class="flex-fill"></div>
         <div class="nav-item px-3">
             <a class="nav-link" href="/auth">
-                <span class="oi oi-key" aria-hidden="true"></span><span class="@MinimizeNavMenuCssClass"></span>
+                <span class="bi bi-person-fill" aria-hidden="true"></span>
             </a>
         </div>
     </nav>
